Adjust z-index of top-left, corrected syntax for top right welcome msg

--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -16,7 +16,7 @@
     background: $color-white;
     display: flex;
     justify-content: center;
-    z-index: 2000;
+    z-index: 1000;
     align-items: center;
 
     // -webkit-box-shadow: 7px 0px 11px -2px rgba(0, 0, 0, 0.56);
@@ -35,8 +35,9 @@
       height: 100%;
 
       display: flex;
+      justify-content: flex-end;
       align-items: center;
-      padding-left: 3rem;
+      padding-right: 3rem;
       // background-color:$color-white;
     }
   }
